Cargar la pagina de mi proyecto Maquinaria

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ featureFolders =
 cucumberOptions =
 
 #Web Sites
-baseurl = http://www.phptravels.net/admin
+#baseurl = http://www.phptravels.net/admin
+baseurl=http://localhost:4200/catalog
 
 #Waits
 implicitTimeWait=15
