Insercion automatica de dato en el campo "nombre" del formulario de Registro de Item

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ explicitTimeWait=30
 #User Credentials PHP travels
 username=admin@phptravels.com
 password=demoadmin
+# Data of machinery items (My Project)
+itemName=Tractor
