--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,12 @@ explicitTimeWait=30
 #User Credentials PHP travels
 username=admin@phptravels.com
 password=demoadmin
+
 # Data of machinery items (My Project)
-itemName=Tractor
+itemName=Tractor de Arado
+category=TRACTOR
+model=m2
+brand=Honda
+capacity=c2
+price=160000
+subcategory=4
